syntax = "proto3";

package eth.rollup.v1;

import "google/protobuf/timestamp.proto";

message ZkEvmRollups {
  repeated ZkEvmRollup rollups = 1;
}

message ZkEvmRollup {
	optional string ZkEVMDeployerContract = 1;
	optional string ProxyAdminContract = 2;
	optional string PolygonZkEVMTimelockContract = 3;
	optional string NativeTokenContract = 4;

	optional string PolygonZkEVMImplementation = 5;
	optional string PolygonZkEVMBridgeImplementation = 6;
	optional string PolygonZkEVMGlobalExitRootImplementation = 7;

	optional string PolygonZkEVMProxy = 8;
	optional string PolygonZkEVMBridgeProxy = 9;
	optional string PolygonZkEVMGlobalExitRootProxy = 10;

  string adminAddress = 11;

	// TODO:
	// deployment block number

	// TODO: how to decode? ANSWER: by detecing `initialize` DELEGATE function call in the stacktrace of the transaction of PolygonZkEVM Proxy creation
	// genesisRoot - present in the input data of PolygonZkEVM Proxy creation transaction
	// trusted sequencer and aggregator addresses - present in the input data of PolygonZkEVM Proxy creation transaction

	// TODO:
	// verifier address - not found in any logs/calls args yet, code change hash we have is the one for a mock, so not much helpful
}